--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "eslint-config-standard": "^12.0.0-alpha.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "uuid": "^3.3.2"
   },
   "homepage": "https://github.com/DevinTyler26/31-redux-budget-tracker#readme"
 }
